# gibrust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
prustbowo/: Cargo.toml
prustbowo/src/: main.rs  scaffold.rs
prustbowo/templates/domain/: dto.rs
prustbowo/templates/project/: .gitignore
prustbowo/templates/project/cmd/: migrate.rs
prustbowo/templates/project/src/app/: route.rs
src/: main.rs  scaffold.rs  templates.rs
templates/domain/: handler.rs  model.rs  repo.rs  service.rs
templates/project/: Cargo.toml  src_app.rs
templates/project/cmd/: export_openapi.rs  main.rs
templates/project/src/: lib.rs
templates/project/src/app/: route.rs
templates/project/src/app/domain/: mod.rs
