[package]
name = "gibrust"
version = "0.1.0"
edition = "2021"
description = "CLI to scaffold and manage Rust REST API projects with Axum, Utoipa, and Diesel"
license = "MIT"
repository = "https://github.com/yaumulisnain/gibrust"
homepage = "https://github.com/yaumulisnain/gibrust"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
convert_case = "0.6"
fs_extra = "1.3"
include_dir = "0.7"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.5"
which = "6.0"
duct = "0.13"
toml_edit = "0.22"
chrono = { version = "0.4", features = ["clock"] }
